# hpcweek-solution

./: .gitignore  README.md  instr2  instr3  run  run.sh
HPCWeek_SPMM/: CMakeLists.txt  build_and_run.sh  run_test.sh
HPCWeek_SPMM/src/: spmm_opt.cpp
baseline/: Makefile  compress.c  compress_baseline.c
go/pkg/mod/cache/download/golang.org/x/exp/@v/: list  v0.0.0-20251009144603-d2f985daa21b.info  v0.0.0-20251009144603-d2f985daa21b.ziphash
hpcweek-conway/: instr  instr4
hpcweek-conway/src/: NG.cpp  NG2.cpp  NGopenmp.cpp  conway.py  visualize.py
hpcweek-ct/: CMakeLists.txt  run.sh
hpcweek-ct/src/: fbp.cpp
htslib_install/lib/pkgconfig/: htslib.pc
mctickshub/mcticks/: README.md
mctickshub/mcticks/world/: Block.h  Bridge.h  Chunk.h  Dimension.h  LevelTicks.h
mctickshub/mcticks1/world/: Dimension.h
mctickshub/mcticks2/: README.md
mctickshub/mcticks2/world/: LightTick.h
mctickshub/mcticks3/world/: Dimension.h  LevelTicks.h  LightTick.cpp
mctickshub/mcticks4/world/: LightTick.cpp
mctickshub/mcticks5/world/: BlockBehaviour.cpp  BlockBehaviour.h  Chunk.h  Dimension.h  Dimension.h.save  LightTick.cpp  LightTick.h
parrallelCompression/: compress  compress.c
rvllm/: CMakeLists.txt  README.md  debug.sh  run  run.sh
rvllm/output/: slurm-58760.err  slurm-58772.err  slurm-58778.err  slurm-58785.err  slurm-58814.err  slurm-58821.err  slurm-58825.err  slurm-58828.err  slurm-58834.err  slurm-58846.err
rvllm/slurm_output/: slurm-60158.err  slurm-60158.out
rvllm/src/: qmatmul.c
src/: NG.cpp  conway.py
submit/: CMakeLists.txt
submit/world/: BlockBehaviour.h  LightTick.cpp
